Implement full symbol and type resolution