@@ -30,7 +30,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.io.File;
-import java.util.Collections;
+import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
 import org.sonar.api.batch.fs.InputFile;
@@ -38,14 +38,14 @@ import org.sonar.api.batch.fs.internal.DefaultFileSystem;
 import org.sonar.api.batch.sensor.SensorDescriptor;
 import org.sonar.api.batch.sensor.internal.SensorContextTester;
 import org.sonar.plugins.delphi.core.DelphiLanguage;
-import org.sonar.plugins.delphi.core.helpers.DelphiProjectHelper;
 import org.sonar.plugins.delphi.executor.DelphiMasterExecutor;
 import org.sonar.plugins.delphi.executor.ExecutorContext;
 import org.sonar.plugins.delphi.file.DelphiFile.DelphiInputFile;
-import org.sonar.plugins.delphi.project.DelphiProject;
+import org.sonar.plugins.delphi.project.DelphiProjectHelper;
 import org.sonar.plugins.delphi.utils.DelphiUtils;
 
 public class DelphiSensorTest {
+  private static final String STANDARD_LIBRARY = "/org/sonar/plugins/delphi/standardLibrary";
   private static final String BASE_PATH = "/org/sonar/plugins/delphi/projects/";
   private static final File BASE_DIR = DelphiUtils.getResource(BASE_PATH);
   private static final String BAD_SYNTAX = BASE_PATH + "BadSyntaxProject/BadSyntax.Pas";
@@ -112,15 +112,14 @@ public class DelphiSensorTest {
   }
 
   private void setupProject(String path) {
-    File srcFile = DelphiUtils.getResource(path);
-
-    DelphiProject project = new DelphiProject("Test");
-    project.addFile(srcFile.getPath());
+    File sourceFile = DelphiUtils.getResource(path);
 
     InputFile inputFile = mock(InputFile.class);
-    when(inputFile.uri()).thenReturn(srcFile.toURI());
+    when(inputFile.uri()).thenReturn(sourceFile.toURI());
 
-    when(delphiProjectHelper.getProjects()).thenReturn(Collections.singletonList(project));
+    when(delphiProjectHelper.mainFiles()).thenReturn(List.of(inputFile));
     when(delphiProjectHelper.getFile(anyString())).thenReturn(inputFile);
+    when(delphiProjectHelper.standardLibraryPath())
+        .thenReturn(DelphiUtils.getResource(STANDARD_LIBRARY).toPath());
   }
 }
